docs: 优化配置和 AutoForm 文档结构
- 重构配置文档的标题层级，提升可读性
- 改进字段组嵌套格式，修复显示问题
- 统一 AutoForm 相关文档的代码示例格式
- 更新文档中的组件引用和链接格式

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -3,11 +3,11 @@ title: 模块配置
 description: 了解 Movk Nuxt 模块的完整配置选项，包括组件前缀和 API 系统配置
 ---
 
-## 设置
+## 介绍
 
 Movk Nuxt 使用 `movk` 作为配置键，在 `nuxt.config.ts` 中进行配置：
 
-### prefix
+## `prefix`
 
 - **类型**: `string`
 - **默认值**: `'M'`
@@ -22,7 +22,7 @@ export default defineNuxtConfig({
 })
 ```
 
-## API 系统配置
+## api
 
 API 系统提供完整的请求封装和认证管理，通过 `api` 选项配置。
 
@@ -61,7 +61,7 @@ export default defineNuxtConfig({
   ::
 ::
 
-### 端点配置
+### `endpoints`
 
 支持配置多个 API 端点，每个端点可以有独立的配置：
 
@@ -122,7 +122,7 @@ export default defineNuxtConfig({
   ::
 ::
 
-### 认证配置
+### `auth`
 
 配置自动认证行为，与 `nuxt-auth-utils` 集成：
 
@@ -186,7 +186,9 @@ export default defineNuxtConfig({
   401 未授权处理配置。
 
     ::collapsible
-      :::field-group
+
+      ::field-group
+
         ::field{name="redirect" type="boolean"}
         401 错误时是否自动跳转登录页。默认 `false`。
         ::
@@ -198,12 +200,12 @@ export default defineNuxtConfig({
         ::field{name="clearSession" type="boolean"}
         401 错误时是否自动清除 session。默认 `false`。
         ::
-      :::
+      ::
     ::
   ::
 ::
 
-### 成功判断配置
+### `response`
 
 配置如何判断 API 响应是否成功：
 
@@ -246,7 +248,7 @@ export default defineNuxtConfig({
   ::
 ::
 
-### Toast 配置
+### `toast`
 
 配置全局 Toast 提示行为：
 
@@ -288,7 +290,9 @@ export default defineNuxtConfig({
   成功提示配置。
 
     ::collapsible
-      :::field-group
+
+      ::field-group
+
         ::field{name="show" type="boolean"}
         是否显示成功提示。默认 `true`。
         ::
@@ -304,7 +308,7 @@ export default defineNuxtConfig({
         ::field{name="duration" type="number"}
         成功提示持续时间（毫秒）。默认 `3000`。
         ::
-      :::
+      ::
     ::
   ::
 
@@ -312,7 +316,9 @@ export default defineNuxtConfig({
   错误提示配置。
 
     ::collapsible
-      :::field-group
+
+      ::field-group
+
         ::field{name="show" type="boolean"}
         是否显示错误提示。默认 `true`。
         ::
@@ -328,82 +334,10 @@ export default defineNuxtConfig({
         ::field{name="duration" type="number"}
         错误提示持续时间（毫秒）。默认 `3000`。
         ::
-      :::
+      ::
     ::
   ::
 ::
-
-## 完整配置示例
-
-以下是一个完整的配置示例，展示所有可用选项：
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  modules: ['@movk/nuxt'],
-
-  movk: {
-    // 组件前缀
-    prefix: 'M',
-
-    // API 系统配置
-    api: {
-      enabled: true,
-      defaultEndpoint: 'default',
-      debug: false,
-
-      // 端点配置
-      endpoints: {
-        default: {
-          baseURL: '/api'
-        },
-        admin: {
-          baseURL: '/admin-api',
-          auth: {
-            tokenType: 'Bearer'
-          }
-        }
-      },
-
-      // 全局认证配置
-      auth: {
-        enabled: true,
-        tokenSource: 'session',
-        sessionTokenPath: 'token',
-        tokenType: 'Bearer',
-        headerName: 'Authorization',
-        unauthorized: {
-          redirect: true,
-          loginPath: '/login',
-          clearSession: true
-        }
-      },
-
-      // 全局成功判断配置
-      response: {
-        successCodes: [200, 0],
-        codeKey: 'code',
-        messageKey: 'message',
-        dataKey: 'data'
-      },
-
-      // 全局 Toast 配置
-      toast: {
-        enabled: true,
-        success: {
-          show: true,
-          color: 'success',
-          duration: 3000
-        },
-        error: {
-          show: true,
-          color: 'error',
-          duration: 5000
-        }
-      }
-    }
-  }
-})
-```
 
 ## 配置优先级
 
@@ -452,19 +386,4 @@ EXTERNAL_API_KEY=your-api-key
 
 ::warning
 不要将敏感信息（如 API 密钥、密码）直接写在配置文件中，始终使用环境变量。
-::
-
-## 模块依赖
-
-Movk Nuxt 依赖以下模块，模块会自动检查版本兼容性：
-
-| 模块 | 最低版本 | 说明 |
-|------|----------|------|
-| `@nuxt/image` | >= 2.0.0 | 图片处理 |
-| `@nuxt/ui` | >= 4.3.0 | UI 组件库 |
-| `@vueuse/nuxt` | >= 14.1.0 | 工具函数 |
-| `nuxt-auth-utils` | >= 0.5.26 | 认证管理（可选，用于 useApiAuth） |
-
-::tip{icon="i-lucide-lightbulb"}
-如果不使用 API 认证功能，`nuxt-auth-utils` 是可选的。
 ::
