--- a/docs/content/docs/3.auto-form/3.configuration.md
+++ b/docs/content/docs/3.auto-form/3.configuration.md
@@ -261,3 +261,4 @@ export default defineAppConfig({
 | `withCharacterLimit` | `WithCharacterLimit`{lang="ts-type"} | 带字符计数的输入框 |
 | `colorChooser` | `ColorChooser`{lang="ts-type"} | 颜色选择器 |
 | `starRating` | `StarRating`{lang="ts-type"} | 星级评分器 |
+| `slideVerify` | `SlideVerify`{lang="ts-type"} | 滑动验证控件 |
