--- a/docs/content/docs/3.auto-form/4.field/1.string.md
+++ b/docs/content/docs/3.auto-form/4.field/1.string.md
@@ -9,7 +9,7 @@ description: String 字段类型的使用方法和配置选项
 使用 `afz.string()` 创建字符串字段：
 ::
 
-### Input
+### `Input`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input"}
 Input 组件文档
@@ -24,7 +24,7 @@ collapse: true
 ---
 ::
 
-### Textarea
+### `Textarea`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/textarea"}
 Textarea 组件文档
@@ -39,7 +39,7 @@ collapse: true
 ---
 ::
 
-### WithClear
+### `WithClear`
 
 输入内容后显示清除按钮，设置 [`type: 'withClear'`](/docs/components/with-clear):
 
@@ -50,7 +50,7 @@ collapse: true
 ---
 ::
 
-### WithPasswordToggle
+### `WithPasswordToggle`
 
 密码输入框，可切换显示/隐藏，设置 [`type: 'withPasswordToggle'`](/docs/components/with-password-toggle):
 
@@ -61,7 +61,7 @@ collapse: true
 ---
 ::
 
-### WithCopy
+### `WithCopy`
 
 点击复制按钮快速复制内容，设置 [`type: 'withCopy'`](/docs/components/with-copy):
 
@@ -72,7 +72,7 @@ collapse: true
 ---
 ::
 
-### WithCharacterLimit
+### `WithCharacterLimit`
 
 实时显示剩余字符数，设置 [`type: 'withCharacterLimit'`](/docs/components/with-character-limit):
 
@@ -83,7 +83,7 @@ collapse: true
 ---
 ::
 
-### PinInput
+### `PinInput`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/pin-input"}
 PinInput 组件文档
@@ -98,7 +98,7 @@ collapse: true
 ---
 ::
 
-### InputMenu
+### `InputMenu`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input-menu"}
 InputMenu 组件文档
@@ -113,7 +113,7 @@ collapse: true
 ---
 ::
 
-### ColorChooser
+### `ColorChooser`
 
 颜色选择器，支持可视化颜色选择和格式化，设置 [`type: 'colorChooser'`](/docs/components/color-chooser)：
 
