--- a/docs/content/docs/3.auto-form/4.field/2.number.md
+++ b/docs/content/docs/3.auto-form/4.field/2.number.md
@@ -9,7 +9,7 @@ description: Number 字段类型的使用方法和配置选项
 使用 `afz.number()` 创建数字字段：
 ::
 
-### InputNumber
+### `InputNumber`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input-number"}
 InputNumber 组件文档
@@ -24,7 +24,7 @@ collapse: true
 ---
 ::
 
-### Slider
+### `Slider`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/slider"}
 Slider 组件文档
@@ -39,7 +39,7 @@ collapse: true
 ---
 ::
 
-### StarRating
+### `StarRating`
 
 星级评分组件，设置 [`type: 'starRating'`](/docs/components/star-rating)，支持半星评分和自定义最大星数：
 
