--- a/docs/content/docs/3.auto-form/4.field/3.boolean.md
+++ b/docs/content/docs/3.auto-form/4.field/3.boolean.md
@@ -9,7 +9,7 @@ description: Boolean 字段类型的使用方法和配置选项
 使用 `afz.boolean()` 创建布尔值字段：
 ::
 
-### Checkbox
+### `Checkbox`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/checkbox"}
 Checkbox 组件文档
@@ -24,7 +24,7 @@ collapse: true
 ---
 ::
 
-### Switch
+### `Switch`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/switch"}
 Switch 组件文档
@@ -35,6 +35,21 @@ Switch 组件文档
 ::component-example
 ---
 name: 'auto-form-field-boolean-switch-example'
+collapse: true
+---
+::
+
+### `SlideVerify`
+
+::callout{color="neutral" to="https://ui.nuxt.com/docs/components/slide-verify"}
+SlideVerify 组件文档
+::
+
+滑动验证控件，设置 `type: 'slideVerify'`，适合防机器人验证：
+
+::component-example
+---
+name: 'auto-form-field-boolean-slide-verify-example'
 collapse: true
 ---
 ::
