--- a/docs/content/docs/3.auto-form/4.field/5.enum.md
+++ b/docs/content/docs/3.auto-form/4.field/5.enum.md
@@ -9,7 +9,7 @@ description: Enum 字段类型的使用方法和配置选项
 使用 `afz.enum()` 创建枚举字段：
 ::
 
-### Select
+### `Select`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/select"}
 Select 组件文档
@@ -24,7 +24,7 @@ collapse: true
 ---
 ::
 
-### SelectMenu
+### `SelectMenu`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/select-menu"}
 SelectMenu 组件文档
@@ -39,7 +39,7 @@ collapse: true
 ---
 ::
 
-### RadioGroup
+### `RadioGroup`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/radio-group"}
 RadioGroup 组件文档
