--- a/docs/content/docs/3.auto-form/4.field/6.array.md
+++ b/docs/content/docs/3.auto-form/4.field/6.array.md
@@ -9,7 +9,7 @@ description: Array 字段类型的使用方法和配置选项
 使用 `afz.array()` 创建数组字段：
 ::
 
-### InputTags
+### `InputTags`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input-tags"}
 InputTags 组件文档
@@ -24,7 +24,7 @@ collapse: true
 ---
 ::
 
-### CheckboxGroup
+### `CheckboxGroup`
 
 ::callout{color="neutral" to="https://ui.nuxt.com/docs/components/checkbox-group"}
 CheckboxGroup 组件文档
