docs: 增强文档元数据和 MCP 使用说明
- 为 AutoForm 字段文档添加 category: field 元数据
- 为插槽文档添加 category: slots 元数据
- 为自定义化文档添加 category: customization 元数据
- 改进 MCP 文档:添加工具和资源详细说明,优化使用示例分类

--- a/docs/content/docs/1.getting-started/4.ai/1.mcp.md
+++ b/docs/content/docs/1.getting-started/4.ai/1.mcp.md
@@ -1,52 +1,89 @@
 ---
 title: MCP Server
-description: 在 AI 助手中通过 Model Context Protocol 支持使用 @movk/nuxt 。
+description: 在 AI 助手中通过 Model Context Protocol 使用 @movk/nuxt。
 ---
 
 ## 什么是 MCP？
 
 MCP (Model Context Protocol) 是一个标准化协议，使 AI 助手能够访问外部数据源和工具。@movk/nuxt 提供 MCP 服务器，让 AI 工具能够直接访问组件信息、API 文档和使用示例。
 
-MCP 服务器提供结构化访问 Nuxt 模块，使 AI 工具在开发过程中更容易理解和协助使用 @movk/nuxt。
-
 ## 可用资源
 
-@movk/nuxt MCP 服务器提供以下资源供发现：
+MCP 服务器提供以下资源供 AI 发现和浏览：
 
-- `resource://movk-nuxt/all-components`: 浏览所有可用组件及其分类
-- `resource://movk-nuxt/autoform-schema`: 浏览 AutoForm Schema 定义和控件类型
+| 资源 URI | 描述 |
+|---------|------|
+| `resource://movk-nuxt/components`{lang="ts-type"} | 所有组件及其分类 |
+| `resource://movk-nuxt/composables`{lang="ts-type"} | 所有 Composables 信息 |
+| `resource://movk-nuxt/auto-form`{lang="ts-type"} | AutoForm Schema 定义和控件类型 |
+| `resource://movk-nuxt/documentation-pages`{lang="ts-type"} | 所有文档页面列表 |
+| `resource://movk-nuxt/examples`{lang="ts-type"} | 所有可用示例 |
 
-您可以在 Claude Code 等工具中使用 `@` 访问这些资源。
+在 Claude Code 等工具中使用 `@` 访问这些资源。
 
 ## 可用工具
 
-@movk/nuxt MCP 服务器提供以下按类别组织的工具：
+### 列表查询
 
-### 查询工具
+| 工具名称 | 描述 |
+|---------|------|
+| `list_components`{lang="ts-type"} | 列出所有组件及其分类和基本信息 |
+| `list_composables`{lang="ts-type"} | 列出所有 Composables 信息 |
+| `list_examples`{lang="ts-type"} | 列出所有可用示例 |
+| `list_documentation_pages`{lang="ts-type"} | 列出所有文档页面 |
+| `list_getting_started_guides`{lang="ts-type"} | 列出入门指南 |
+### 详情获取
 
-- `list_components`: 列出所有可用的 @movk/nuxt 组件及其分类和基本信息
-- `get_component`: 获取特定组件的详细文档和使用示例
-- `search_composables`: 按功能或关键词搜索 Composables
+| 工具名称 | 描述 |
+|---------|------|
+| `get_documentation_page`{lang="ts-type"} | 获取特定文档页面的完整内容 |
+| `get_example`{lang="ts-type"} | 获取示例的实现代码 |
+
+### 搜索过滤
+
+| 工具名称 | 描述 |
+|---------|------|
+| `search_components_by_category`{lang="ts-type"} | 按分类或关键词搜索组件 |
+| `search_auto_form_by_category`{lang="ts-type"} | 按分类搜索 AutoForm 文档 |
 
 ## 可用提示
 
-@movk/nuxt MCP 服务器为常见工作流提供引导式提示：
+MCP 服务器为常见工作流提供引导式提示：
 
-- `find_component_for_usecase`: 根据使用场景找到最适合的组件或 Composable
+| 提示名称 | 描述 |
+|---------|------|
+| `find_component_for_usecase`{lang="ts-type"} | 根据使用场景推荐最适合的组件 |
+| `find_autoform_solution`{lang="ts-type"} | 根据表单需求推荐字段类型和配置方案 |
 
-您可以在 Claude Code 等工具中使用 `/` 访问这些资源。
+在 Claude Code 等工具中使用 `/` 访问这些提示。
 
 ## 使用示例
 
-配置完成后，您可以向 AI 助手提出如下问题：
+配置完成后，可以向 AI 助手提出如下问题：
 
-- "列出所有可用的 @movk/nuxt 组件"
-- "获取 MAutoForm 组件的文档"
+**入门与配置**
+- "如何安装 @movk/nuxt？"
+- "支持哪些 Nuxt 版本？"
+- "如何配置组件前缀？"
+
+**组件查询**
+- "列出所有可用组件"
 - "DatePicker 接受哪些属性？"
-- "查找表单相关的组件"
-- "列出所有 Composables"
-- "获取 useApiFetch 的使用示例"
-- "展示所有文件上传组件"
-- "我需要实现文件上传进度监控，用什么 Composable？"
+- "如何使用 StarRating 组件？"
 
-AI 助手将使用 MCP 服务器获取结构化 JSON 数据，并在开发过程中为 @movk/nuxt 提供引导式协助。
+**AutoForm 表单**
+- "如何创建基础表单？"
+- "支持哪些字段类型？"
+- "如何实现条件渲染？"
+
+**API 系统**
+- "useApiFetch 和 $fetch 有什么区别？"
+- "如何监控文件上传进度？"
+- "如何处理认证登录？"
+
+**场景匹配**
+- "我需要构建用户注册表单，应该用什么？"
+- "帮我找适合实现日期选择的组件"
+- "我想实现带进度条的文件上传功能"
+
+AI 助手将使用 MCP 服务器获取结构化数据，并为 @movk/nuxt 提供引导式协助。
