refactor: 完善 useApiAuth Session 配置并修正类型导出
- 重构 useApiAuth 内部函数结构,提取配置获取逻辑
- 优化 token 提取器支持多路径查找
- 使用 PartialByKeys 类型优化 sessionBuilder 返回类型
- 添加 Session 配置文档说明(包含默认配置和环境变量要求)
- 修正 types/index.ts 中 zod 类型文件导出路径

--- a/docs/content/docs/4.composables/04.use-api-auth.md
+++ b/docs/content/docs/4.composables/04.use-api-auth.md
@@ -155,6 +155,30 @@ await login({
 `nuxt-auth-utils` 会自动加密 `secure` 字段，保护敏感数据。
 ::
 
+## Session 配置
+
+通过 `sessionConfig` 选项可以自定义 Session 的行为，包括过期时间、Cookie 配置等。
+
+### 默认配置
+
+```ts [nuxt.config.ts]
+{
+  name: useSiteConfig().name,
+  password: process.env.NUXT_SESSION_PASSWORD || '',
+  cookie: {
+    sameSite: 'lax'
+  }
+}
+```
+
+::warning
+生产环境务必设置 `NUXT_SESSION_PASSWORD` 环境变量，用于加密 Session 数据。建议使用至少 32 位的随机字符串。
+::
+
+::tip{icon="i-lucide-link" to="https://github.com/atinux/nuxt-auth-utils?tab=readme-ov-file#configuration"}
+了解更多 Session 配置选项，请参考 nuxt-auth-utils 文档
+::
+
 ## 用户信息获取
 
 有两种方式获取用户信息:
@@ -241,6 +265,12 @@ await login({
 
         ::field{name="sessionBuilder" type="(user: User, token: string) => UserSession"}
         自定义 session 构建函数。默认返回 `{ user, token, loggedInAt }`。
+        ::
+
+        ::field{name="sessionConfig" type="Partial<SessionConfig>"}
+        Session 配置选项，用于自定义 Session 的行为。
+        - [查看 nuxt-auth-utils 文档](https://github.com/atinux/nuxt-auth-utils?tab=readme-ov-file#configuration)
+        - 默认配置：`{ name: useSiteConfig().name, password: process.env.NUXT_SESSION_PASSWORD, cookie: { sameSite: 'lax' } }`
         ::
 
         ::field{name="endpoint" type="string"}
