--- a/docs/content/docs/4.composables/04.use-api-auth.md
+++ b/docs/content/docs/4.composables/04.use-api-auth.md
@@ -3,150 +3,117 @@ title: useApiAuth
 description: API 认证 composable，提供登录、登出和 Session 管理，与 nuxt-auth-utils 无缝集成。
 ---
 
-## Usage
+## 概述
 
-使用自动导入的 `useApiAuth` composable 管理用户认证，包括登录、登出、Session 管理等功能。与 [nuxt-auth-utils](https://github.com/atinux/nuxt-auth-utils) 完全集成。
+`useApiAuth` 扩展了 [nuxt-auth-utils](https://github.com/atinux/nuxt-auth-utils) 的 `useUserSession`，添加了 `login()` 方法来处理完整的登录流程。
+
+::note
+使用前请确保已安装并配置 `nuxt-auth-utils` 模块。
+::
 
 ```vue
 <script setup lang="ts">
-// 获取认证相关方法和状态
-const { login, clear, loggedIn, user } = useApiAuth()
+const { login, clear, loggedIn, user, session, fetch } = useApiAuth()
 
-// 基础登录
-const handleLogin = async () => {
-  await login({
-    loginPath: '/auth/login',
-    credentials: {
-      username: 'admin',
-      password: '123456'
-    }
-  })
-
-  // 登录成功后跳转
-  if (loggedIn.value) {
-    navigateTo('/dashboard')
-  }
-}
+// 登录
+await login({
+  loginPath: '/auth/login',
+  credentials: { username: 'admin', password: '123456' }
+})
 
 // 登出
-const handleLogout = async () => {
-  await clear()
-  navigateTo('/login')
-}
+await clear()
 
 // 响应式状态
 watchEffect(() => {
   if (loggedIn.value) {
     console.log('当前用户:', user.value)
+    console.log('Session 数据:', session.value)
   }
 })
 </script>
 ```
 
-- `useApiAuth` 基于 `nuxt-auth-utils` 提供的 Session 管理功能。
-- 支持自动获取用户信息、自定义 token 提取和 session 构建。
-- 登录后 token 会自动添加到后续 API 请求的请求头。
-
-::note
-`useApiAuth` 依赖 `nuxt-auth-utils` 模块。确保已安装并正确配置该模块。
-::
-
 ::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#auth"}
 了解认证相关的全局配置选项
 ::
-
 
 ## 登录流程
 
 `login()` 方法执行以下步骤:
 
-1. 调用登录接口，传递凭证
-2. 从响应中提取 token(通过 `tokenExtractor`)
-3. 如果提供 `userInfoPath`，使用 token 调用用户信息接口
-4. 构建 session 数据(通过 `sessionBuilder`)
-5. 设置 session 到服务端
-6. 刷新客户端 session 状态
+```mermaid
+flowchart LR
+    A[调用登录接口] --> B[提取 Token]
+    B --> C{有 userInfoPath?}
+    C -->|是| D[调用用户信息接口]
+    C -->|否| E[使用登录响应作为用户数据]
+    D --> F[构建 Session]
+    E --> F
+    F --> G[设置服务端 Session]
+    G --> H[刷新客户端状态]
+```
+
+完整示例:
 
 ```ts
-// 完整流程示例
-await login({
-  // 1. 登录接口
+const { user, token, loginData } = await login({
   loginPath: '/auth/login',
   credentials: { username: 'admin', password: '123456' },
-
-  // 2. 用户信息接口(可选)
   userInfoPath: '/auth/me',
-
-  // 3. 自定义 token 提取
   tokenExtractor: (res) => res.data?.accessToken,
-
-  // 4. 自定义 session 构建
-  sessionBuilder: (user, token) => ({
+  sessionBuilder: (user, token, loginData) => ({
     user: { id: user.id, name: user.name },
+    loggedInAt: new Date().toISOString(),
     secure: { token, permissions: user.permissions }
-  })
+  }),
+  sessionConfig: { maxAge: 60 * 60 * 24 * 7 },
+  endpoint: 'main'
 })
 ```
 
 ## Token 提取
 
-默认 `tokenExtractor` 会依次尝试以下路径:
+默认提取逻辑会依次尝试以下路径:
 
-1. `data.token`
-2. `data.accessToken`
-3. `token`
+1. 配置的 `auth.sessionTokenPath`（如果有）
+2. `data.token`
+3. `data.accessToken`
+4. `token`
+5. `accessToken`
 
-::tip
-如果 API 响应格式不同，可以自定义提取逻辑:
-::
+自定义提取:
 
 ```ts
-// 自定义 token 路径
 await login({
   loginPath: '/auth/login',
   credentials: { username: 'admin', password: '123456' },
-  tokenExtractor: (res) => res.data?.jwt  // 从 data.jwt 提取
-})
-
-// 复杂嵌套结构
-await login({
-  loginPath: '/auth/login',
-  credentials: { username: 'admin', password: '123456' },
-  tokenExtractor: (res) => res.data?.session?.accessToken
+  tokenExtractor: (res) => res.data?.jwt
 })
 ```
 
 ## Session 构建
 
-默认 `sessionBuilder` 构建以下 session 结构:
+默认构建结构:
 
 ```ts
 {
   user: User,           // 用户信息
   token: string,        // 访问令牌
-  loggedInAt: string    // 登录时间(ISO 格式)
+  loggedInAt: string    // 登录时间（ISO 格式）
 }
 ```
 
-::tip
-可以自定义 session 结构，例如分离敏感数据:
-::
+自定义构建（分离敏感数据）:
 
 ```ts
 await login({
   loginPath: '/auth/login',
   credentials: { username: 'admin', password: '123456' },
-  sessionBuilder: (user, token) => ({
-    user: {
-      id: user.id,
-      name: user.name,
-      avatar: user.avatar
-    },
-    secure: {
-      token,
-      refreshToken: user.refreshToken,
-      permissions: user.permissions
-    }
+  sessionBuilder: (user, token, loginData) => ({
+    user: { id: user.id, name: user.name, avatar: user.avatar },
+    secure: { token, refreshToken: loginData.refreshToken },
+    loggedInAt: new Date().toISOString()
   })
 })
 ```
@@ -157,153 +124,171 @@ await login({
 
 ## Session 配置
 
-通过 `sessionConfig` 选项可以自定义 Session 的行为，包括过期时间、Cookie 配置等。
+通过 `sessionConfig` 自定义 Session 行为:
 
-### 默认配置
-
-```ts [nuxt.config.ts]
-{
-  name: useSiteConfig().name,
-  password: process.env.NUXT_SESSION_PASSWORD || '',
-  cookie: {
-    sameSite: 'lax'
+```ts
+await login({
+  loginPath: '/auth/login',
+  credentials: { username: 'admin', password: '123456' },
+  sessionConfig: {
+    maxAge: 60 * 60 * 24 * 7, // 7 天
+    cookie: {
+      httpOnly: true,
+      secure: true,
+      sameSite: 'lax'
+    }
   }
-}
+})
 ```
 
 ::warning
-生产环境务必设置 `NUXT_SESSION_PASSWORD` 环境变量，用于加密 Session 数据。建议使用至少 32 位的随机字符串。
+生产环境务必设置 `NUXT_SESSION_PASSWORD` 环境变量（建议至少 32 位随机字符串）。
 ::
 
 ::tip{icon="i-lucide-link" to="https://github.com/atinux/nuxt-auth-utils?tab=readme-ov-file#configuration"}
-了解更多 Session 配置选项，请参考 nuxt-auth-utils 文档
+查看完整的 Session 配置选项
 ::
 
 ## 用户信息获取
 
-有两种方式获取用户信息:
-
-### 方式 1: 从登录响应获取
+### 从登录响应获取
 
 ```ts
-// 登录响应包含用户信息
 await login({
   loginPath: '/auth/login',
   credentials: { username: 'admin', password: '123456' }
 })
-
-// 用户信息从登录响应的 data 字段提取
 ```
 
-登录响应格式示例:
+响应格式示例:
 
 ```json
 {
   "code": 200,
-  "message": "登录成功",
   "data": {
-    "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+    "token": "eyJhbGciOiJIUzI1NiIs...",
     "id": 1,
-    "name": "Admin",
-    "email": "admin@example.com"
+    "name": "Admin"
   }
 }
 ```
 
-### 方式 2: 调用独立的用户信息接口
+### 调用独立接口
 
 ```ts
-// 使用 userInfoPath 自动调用用户信息接口
 await login({
   loginPath: '/auth/login',
   credentials: { username: 'admin', password: '123456' },
-  userInfoPath: '/auth/me'  // 使用 token 调用此接口
+  userInfoPath: '/auth/me'
 })
 ```
 
-此方式会自动:
-1. 从登录响应提取 token
-2. 使用 token 调用 `/auth/me`
-3. 将用户信息接口的响应作为用户数据
+会自动使用提取的 token 调用 `/auth/me` 获取用户信息。
 
 ## API
 
 ### useApiAuth()
 
-`useApiAuth(): UseApiAuthReturn`{lang="ts-type"}
+```ts
+function useApiAuth(): UseApiAuthReturn
+```
 
-创建认证管理器。
+返回扩展了 `login()` 方法的 `UserSessionComposable`。
 
-#### Returns
-
-返回包含以下方法和属性的认证管理器对象:
+#### 返回值
 
 ::field-group
-
-  ::field{name="login()" type="<LoginRData = unknown>(options: LoginOptions<LoginRData>) => Promise<LoginResult>"}
+  ::field{name="login()" type="<LoginRData = unknown>(options: LoginOptions<LoginRData>) => Promise<LoginResult<LoginRData>>"}
   执行登录流程。
-
-    ::collapsible
-      **Parameters**
-
-      ::field-group
-        ::field{name="loginPath" type="string" required}
-        登录接口路径。
-        ::
-
-        ::field{name="credentials" type="Record<string, unknown>" required}
-        登录凭证(如用户名、密码)。
-        ::
-
-        ::field{name="userInfoPath" type="string"}
-        用户信息接口路径。如果提供，登录后会使用 token 调用此接口获取用户信息。
-        ::
-
-        ::field{name="tokenExtractor" type="(response: ApiResponse<LoginRData>) => string | null | undefined"}
-        自定义 token 提取函数。默认从 `data.token`、`data.accessToken` 或 `token` 字段提取。
-        ::
-
-        ::field{name="sessionBuilder" type="(user: User, token: string) => UserSession"}
-        自定义 session 构建函数。默认返回 `{ user, token, loggedInAt }`。
-        ::
-
-        ::field{name="sessionConfig" type="Partial<SessionConfig>"}
-        Session 配置选项，用于自定义 Session 的行为。
-        - [查看 nuxt-auth-utils 文档](https://github.com/atinux/nuxt-auth-utils?tab=readme-ov-file#configuration)
-        - 默认配置：`{ name: useSiteConfig().name, password: process.env.NUXT_SESSION_PASSWORD, cookie: { sameSite: 'lax' } }`
-        ::
-
-        ::field{name="endpoint" type="string"}
-        使用指定的端点配置。
-        ::
-      ::
-
-      **Returns**
-
-      返回 `Promise<LoginResult>`，包含:
-      - `user: User` - 用户信息
-      - `token: string` - 访问令牌
-    ::
   ::
 
-  ::field{name="loggedIn" type="Ref<boolean>"}
-  是否已登录(响应式)。
+  ::field{name="loggedIn" type="ComputedRef<boolean>"}
+  是否已登录。
   ::
 
-  ::field{name="user" type="Ref<User | null>"}
-  当前用户信息(响应式)。
+  ::field{name="user" type="ComputedRef<User | null>"}
+  当前用户信息。
   ::
 
-  ::field{name="session" type="Ref<UserSession | null>"}
-  当前 session 数据(响应式)。
+  ::field{name="session" type="Ref<UserSession>"}
+  当前 Session 数据。
   ::
 
   ::field{name="fetch()" type="() => Promise<void>"}
-  刷新 session 状态。
+  刷新 Session 状态。
   ::
 
   ::field{name="clear()" type="() => Promise<void>"}
-  清除 session(登出)。
+  清除 Session（登出）。
+  ::
+::
+
+### LoginOptions
+
+```ts
+interface LoginOptions<LoginRData = unknown> {
+  loginPath: string
+  credentials: unknown
+  userInfoPath?: string
+  tokenExtractor?: (response: ApiResponse<LoginRData>) => string | null | undefined
+  sessionBuilder?: (userInfo: User, token: string, loginData: LoginRData) => PartialByKeys<UserSession, 'id'>
+  sessionConfig?: Partial<SessionConfig>
+  endpoint?: string
+}
+```
+
+::field-group
+  ::field{name="loginPath" type="string" required}
+  登录接口路径。
+  ::
+
+  ::field{name="credentials" type="unknown" required}
+  登录凭证（用户名/密码等）。
+  ::
+
+  ::field{name="userInfoPath" type="string"}
+  用户信息接口路径。如果提供，登录后会使用 token 调用此接口获取用户信息。
+  ::
+
+  ::field{name="tokenExtractor" type="(response: ApiResponse<LoginRData>) => string | null | undefined"}
+  自定义 token 提取函数。默认从 `response.token` 或 `response.data.token` 提取。
+  ::
+
+  ::field{name="sessionBuilder" type="(userInfo: User, token: string, loginData: LoginRData) => PartialByKeys<UserSession, 'id'>"}
+  自定义 Session 构建函数。默认返回 `{ user, token, loggedInAt }`。
+  ::
+
+  ::field{name="sessionConfig" type="Partial<SessionConfig>"}
+  Session 配置选项（maxAge、cookie 等）。
+  - [查看 nuxt-auth-utils 文档](https://github.com/atinux/nuxt-auth-utils?tab=readme-ov-file#configuration)
+  ::
+
+  ::field{name="endpoint" type="string"}
+  使用指定的端点配置（默认使用 `defaultEndpoint`）。
+  ::
+::
+
+### LoginResult
+
+```ts
+interface LoginResult<LoginRData = unknown> {
+  user: User
+  token: string
+  loginData: LoginRData
+}
+```
+
+::field-group
+  ::field{name="user" type="User"}
+  用户信息。
+  ::
+
+  ::field{name="token" type="string"}
+  认证令牌。
+  ::
+
+  ::field{name="loginData" type="LoginRData"}
+  登录响应数据（已提取）。
   ::
 ::
 
