feat: 新增全局 API Hooks 系统并优化 401 处理配置
- 新增 useApiHooks composable，支持全局和端点级钩子覆盖
- 修改 unauthorized 默认配置：redirect 和 clearSession 改为 true
- 导出 AutoFormRenderer 组件接口供外部扩展
- 修复服务端错误处理 API (statusCode -> status)

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -144,10 +144,10 @@ export default defineNuxtConfig({
         // 401 未授权处理配置
         unauthorized: {
           // 401 时跳转登录页
-          redirect: false,
+          redirect: true,
           loginPath: '/login',
           // 401 时清除 session
-          clearSession: false
+          clearSession: true
         }
       }
     }
@@ -190,7 +190,7 @@ export default defineNuxtConfig({
       ::field-group
 
         ::field{name="redirect" type="boolean"}
-        401 错误时是否自动跳转登录页。默认 `false`。
+        401 错误时是否自动跳转登录页。默认 `true`。
         ::
 
         ::field{name="loginPath" type="string"}
@@ -198,7 +198,7 @@ export default defineNuxtConfig({
         ::
 
         ::field{name="clearSession" type="boolean"}
-        401 错误时是否自动清除 session。默认 `false`。
+        401 错误时是否自动清除 session。默认 `true`。
         ::
       ::
     ::
