--- a/docs/content/docs/4.composables/02.use-api-fetch.md
+++ b/docs/content/docs/4.composables/02.use-api-fetch.md
@@ -141,7 +141,9 @@ const { data } = await useApiFetch('/users', {
 
 ## 自定义 Hooks
 
-支持自定义请求钩子，与内置钩子合并执行:
+### 请求级 Hooks
+
+每个 `useApiFetch` 调用可以传入请求级钩子，与内置钩子**合并执行**（内置先执行，用户后执行）:
 
 ```ts
 const { data } = await useApiFetch('/users', {
@@ -159,9 +161,80 @@ const { data } = await useApiFetch('/users', {
   }
 })
 ```
+
 ::tip
-用户钩子会在内置钩子之后执行，不会覆盖内置的认证和 Toast 逻辑。
+请求级钩子会在内置钩子**之后**执行，不会覆盖内置的认证和 Toast 逻辑。
 ::
+
+### 全局 Hooks（覆盖内置行为）
+
+如需**覆盖**内置钩子的行为（如自定义 401 处理、替换认证逻辑），使用 `useApiHooks` 在插件中注册全局钩子:
+
+```ts
+// plugins/api-hooks.ts
+export default defineNuxtPlugin(() => {
+  useApiHooks({
+    async onResponseError(context, builtin) {
+      if (context.response.status === 401) {
+        // 自定义 401 处理：尝试刷新 token
+        const refreshed = await tryRefreshToken()
+        if (refreshed) return // 跳过内置 401 处理
+      }
+      await builtin(context) // 其他错误走内置处理（Toast 提示等）
+    }
+  })
+})
+```
+
+每个钩子接收两个参数:
+
+- `context` — ofetch 的请求/响应上下文
+- `builtin` — 内置钩子函数，调用它执行默认行为，不调用则完全覆盖
+
+4 个可覆盖的内置钩子:
+
+| 钩子 | 内置行为 |
+|------|---------|
+| `onRequest` | 认证 header 注入、debug 日志 |
+| `onRequestError` | debug 错误日志 |
+| `onResponse` | 业务状态码检查、成功 Toast |
+| `onResponseError` | 401 未授权处理、错误 Toast |
+
+还可以按端点配置不同的钩子:
+
+```ts
+// plugins/api-hooks.ts
+export default defineNuxtPlugin(() => {
+  useApiHooks({
+    hooks: {
+      // 全局钩子（所有端点）
+      onRequest(context, builtin) {
+        builtin(context)
+        console.log('所有请求的自定义日志')
+      }
+    },
+    endpoints: {
+      // 仅 payment 端点
+      payment: {
+        onResponseError(context, builtin) {
+          // payment 端点的专属错误处理
+        }
+      }
+    }
+  })
+})
+```
+
+::note
+钩子解析优先级: **端点级钩子** > **全局钩子** > **内置钩子**。
+::
+
+### Hooks 层级对比
+
+| 层级 | 注册方式 | 与内置钩子的关系 | 适用场景 |
+|------|---------|-----------------|---------|
+| 请求级 | `useApiFetch` 的 `onXxx` 选项 | 合并执行（追加） | 单个请求的额外处理 |
+| 全局/端点级 | `useApiHooks` (在 `defineNuxtPlugin` 内) | 可覆盖（通过 `builtin` 控制） | 自定义 401、认证逻辑等 |
 
 ## API
 
