refactor: 移除 useApiAuth 过度封装
移除 useApiAuth composable 及其相关基础设施，简化 API 认证架构。
用户可直接使用 nuxt-auth-utils 的原生 API 进行认证管理。

BREAKING CHANGE: 移除 useApiAuth composable 和 /api/_movk/session 路由

- 删除 src/runtime/composables/useApiAuth.ts
- 删除 src/runtime/server/api/_movk/session.post.ts
- 删除 src/utils/meta.ts（未被使用的工具函数）
- 移除 types/api.ts 中的 LoginOptions、LoginResult、UseApiAuthReturn 类型
- 移除 module.ts 中的 session route 注册和 session 配置
- 更新所有文档引用（README.md、CLAUDE.md、docs/）
- 移除 playground 示例页面和导航项

注意：ApiAuthConfig（token 注入、401 处理）保留，这些是 API 系统的基础设施，
由 api.factory.ts 使用，与 useApiAuth composable 无关。

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -27,7 +27,7 @@ export default defineNuxtConfig({
 API 系统提供完整的请求封装和认证管理，通过 `api` 选项配置。
 
 ::note{icon="i-lucide-info"}
-API 系统的完整使用方法请参考 [useApiFetch](/docs/composables/use-api-fetch) 和 [useApiAuth](/docs/composables/use-api-auth)。
+API 系统的完整使用方法请参考 [useApiFetch](/docs/composables/use-api-fetch)。
 ::
 
 ### 基础配置
