--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -29,7 +29,7 @@ Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engine
   :::
 
   :::card{icon="i-lucide-wrench" title="通用工具函数"}
-  `useDateFormatter`、`useApiFetch`、`useApiAuth` 等高质量 composables，即使不使用自动化系统也可独立使用。
+  `useDateFormatter`、`useApiFetch` 等高质量 composables，即使不使用自动化系统也可独立使用。
   :::
 ::
 
@@ -41,7 +41,7 @@ Movk Nuxt 采用清晰的分层架构：
 **架构层级**
 
 - **Core Systems** - AutoForm（Schema 驱动表单）
-- **API System** - useApiFetch、useApiAuth、useUploadWithProgress、useDownloadWithProgress（API 请求与认证）
+- **API System** - useApiFetch、useUploadWithProgress、useDownloadWithProgress（API 请求封装）
 - **Standalone Components** - DatePicker、StarRating、WithCopy 等独立 UI 组件
 - **Composables** - useDateFormatter、useAutoForm 等通用组合式函数
 - **Foundation** - 基于 [Nuxt UI](https://ui.nuxt.com)、[Zod v4](https://zod.dev)、[VueUse](https://vueuse.org)
@@ -59,10 +59,9 @@ Movk Nuxt 采用清晰的分层架构：
 
 ### API System - 统一的请求与认证
 
-提供完整的 API 请求和认证方案，与 nuxt-auth-utils 无缝集成：
+提供完整的 API 请求方案：
 
 - `useApiFetch` - 基于 useFetch 封装，支持自动认证、业务状态码检查、Toast 提示
-- `useApiAuth` - 登录、登出、Session 管理
 - `useUploadWithProgress` / `useDownloadWithProgress` - 带进度监控的文件上传下载
 
 ::tip{icon="i-lucide-cloud" to="/docs/composables/use-api-fetch"}
@@ -96,6 +95,6 @@ Movk Nuxt 采用清晰的分层架构：
 **已发布**
 
 - ✅ **AutoForm** - Schema 驱动的表单系统
-- ✅ **API System** - API 请求封装和认证管理（useApiFetch、useApiAuth、useUploadWithProgress、useDownloadWithProgress）
+- ✅ **API System** - API 请求封装（useApiFetch、useUploadWithProgress、useDownloadWithProgress）
 - ✅ **独立组件库** - DatePicker、StarRating、WithCopy 等组件
 ::
