feat: 新增 useLazyApiFetch 并重构文档结构
- 新增 useLazyApiFetch composable，提供 lazy 便捷封装
- 重组文档结构：API 参考独立为第 4 章节，Composables 移至第 5 章节
- 删除旧的 API composables 详细文档（useApiFetch/useClientApiFetch/useUpload/useDownload）
- 新增 API 参考章节（包含 $api 实例、hooks 系统等）
- 新增最佳实践章节
- 简化并更新 CLAUDE.md，使其更聚焦于架构设计
- 更新 README.md 和相关配置

--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -1,6 +1,6 @@
 ---
 title: 快速开始
-description: Movk Nuxt 是一个模块化的 Nuxt 4 工程套件，提供 Schema 驱动表单、API 集成、独立组件和通用工具函数
+description: 了解 Movk Nuxt 的核心特性与分层架构，从安装到上手 AutoForm、API System 和独立组件
 ---
 
 ## 介绍
@@ -64,7 +64,7 @@ Movk Nuxt 采用清晰的分层架构：
 - `useApiFetch` - 基于 useFetch 封装，支持自动认证、业务状态码检查、Toast 提示
 - `useUploadWithProgress` / `useDownloadWithProgress` - 带进度监控的文件上传下载
 
-::tip{icon="i-lucide-cloud" to="/docs/composables/use-api-fetch"}
+::tip{icon="i-lucide-cloud" to="/docs/api"}
 了解 API System 的使用方法
 ::
 
