--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -18,13 +18,14 @@ description: 在 Nuxt 4 项目中安装和配置 Movk Nuxt 模块
 ### 安装所需依赖
 
 ::warning
-`@movk/nuxt` 依赖 **@nuxt/ui** 和 **zod**，请确保已安装。
+`Movk Nuxt` 依赖 **@nuxt/ui** 和 **zod**，请确保已安装。
 ::
 
 ::warning
-如果你使用的是 pnpm，请确保你在 `.npmrc` 文件中设置 `shamefully-hoist=true` ，或者在项目的根目录中安装 `tailwindcss` 。
+如果你使用的是 pnpm ：
+- 请确保你在 `.npmrc` 文件中设置 `shamefully-hoist=true`
+- 或者在项目的根目录中安装 `tailwindcss`
 ::
-
 
 ::code-group
 ```bash [pnpm]
@@ -57,7 +58,6 @@ export default defineNuxtConfig({
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   modules: ['@movk/nuxt'],
-
   movk: {
     // 组件前缀 (默认: 'M')
     prefix: 'M'
