--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -1,6 +1,6 @@
 ---
 title: 模块配置
-description: 了解 Movk Nuxt 模块的完整配置选项，包括组件前缀和 API 系统配置
+description: 配置组件前缀、API 端点、认证策略、响应解析规则和 Toast 提示行为
 ---
 
 ## 介绍
@@ -26,8 +26,8 @@ export default defineNuxtConfig({
 
 API 系统提供完整的请求封装和认证管理，通过 `api` 选项配置。
 
-::note{icon="i-lucide-info"}
-API 系统的完整使用方法请参考 [useApiFetch](/docs/composables/use-api-fetch)。
+::note{icon="i-lucide-info" to="/docs/api"}
+API 系统的完整使用方法请参考 API 文档。
 ::
 
 ### 基础配置
@@ -109,16 +109,16 @@ export default defineNuxtConfig({
   该端点的默认请求头 **仅服务端使用，不会暴露给客户端**。
   ::
 
-  ::field{name="auth" type="ApiAuthConfig"}
+  ::field{name="auth" type="Partial<ApiAuthConfig>"}
   该端点的认证配置，会与全局配置合并。
   ::
 
-  ::field{name="toast" type="ApiToastConfig"}
+  ::field{name="toast" type="Partial<ApiToastConfig>"}
   该端点的 Toast 配置，会与全局配置合并。
   ::
 
-  ::field{name="success" type="ApiSuccessConfig"}
-  该端点的成功判断配置，会与全局配置合并。
+  ::field{name="response" type="Partial<ApiResponseConfig>"}
+  该端点的响应配置，会与全局配置合并。
   ::
 ::
 
@@ -136,7 +136,7 @@ export default defineNuxtConfig({
         // Token 来源
         tokenSource: 'session',
         // Session 中 token 的路径
-        sessionTokenPath: 'custom',
+        sessionTokenPath: 'user.accessToken',
         // Token 类型
         tokenType: 'Bearer',
         // 请求头名称
@@ -162,8 +162,8 @@ export default defineNuxtConfig({
   是否启用认证。默认 `false`。
   ::
 
-  ::field{name="tokenSource" type="'session' | 'custom'"}
-  Token 来源。`'session'` 从 nuxt-auth-utils 的 session 中获取（推荐），`'custom'` 使用自定义方式。默认 `'session'`。
+  ::field{name="tokenSource" type="'session'"}
+  Token 来源，从 nuxt-auth-utils 的 session 中获取。默认 `'session'`。
   ::
 
   ::field{name="sessionTokenPath" type="string"}
@@ -207,7 +207,7 @@ export default defineNuxtConfig({
 
 ### `response`
 
-配置如何判断 API 响应是否成功：
+配置 API 响应的解析规则，包括业务状态码判断、数据解包字段和消息提取：
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -228,7 +228,7 @@ export default defineNuxtConfig({
 })
 ```
 
-#### 成功判断选项
+#### 响应配置选项
 
 ::field-group
   ::field{name="successCodes" type="(number | string)[]"}
@@ -263,14 +263,12 @@ export default defineNuxtConfig({
         success: {
           show: true,
           color: 'success',
-          icon: 'i-lucide-circle-check',
           duration: 3000
         },
         // 错误提示配置
         error: {
           show: true,
           color: 'error',
-          icon: 'i-lucide-circle-x',
           duration: 3000
         }
       }
@@ -286,7 +284,7 @@ export default defineNuxtConfig({
   是否全局启用提示。默认 `true`。
   ::
 
-  ::field{name="success" type="ApiToastItemConfig"}
+  ::field{name="success" type="{ show, color, icon?, duration }"}
   成功提示配置。
 
     ::collapsible
@@ -302,7 +300,7 @@ export default defineNuxtConfig({
         ::
 
         ::field{name="icon" type="string"}
-        成功提示图标。
+        成功提示图标。不配置时内部默认使用 `'i-lucide-circle-check'`。
         ::
 
         ::field{name="duration" type="number"}
@@ -312,7 +310,7 @@ export default defineNuxtConfig({
     ::
   ::
 
-  ::field{name="error" type="ApiToastItemConfig"}
+  ::field{name="error" type="{ show, color, icon?, duration }"}
   错误提示配置。
 
     ::collapsible
@@ -328,7 +326,7 @@ export default defineNuxtConfig({
         ::
 
         ::field{name="icon" type="string"}
-        错误提示图标。
+        错误提示图标。不配置时内部默认使用 `'i-lucide-circle-x'`。
         ::
 
         ::field{name="duration" type="number"}
@@ -343,7 +341,7 @@ export default defineNuxtConfig({
 
 配置按以下优先级合并（后者覆盖前者）：
 
-1. **Schema 默认值** - Zod Schema 定义的默认值
+1. **模块内置默认值** - `api-defaults.ts` 中定义的默认配置
 2. **全局配置** - `movk.api.auth`、`movk.api.toast`、`movk.api.response`
 3. **端点配置** - `movk.api.endpoints[name].auth` 等
 4. **请求级配置** - `useApiFetch` 的 `toast` 选项等
