--- a/docs/content/docs/1.getting-started/4.ai/1.mcp.md
+++ b/docs/content/docs/1.getting-started/4.ai/1.mcp.md
@@ -1,11 +1,11 @@
 ---
 title: MCP Server
-description: 在 AI 助手中通过 Model Context Protocol 使用 @movk/nuxt。
+description: 在 AI 助手中通过 Model Context Protocol 使用 Movk Nuxt。
 ---
 
 ## 什么是 MCP？
 
-MCP (Model Context Protocol) 是一个标准化协议，使 AI 助手能够访问外部数据源和工具。@movk/nuxt 提供 MCP 服务器，让 AI 工具能够直接访问组件信息、API 文档和使用示例。
+MCP (Model Context Protocol) 是一个标准化协议，使 AI 助手能够访问外部数据源和工具。Movk Nuxt 提供 MCP 服务器，让 AI 工具能够直接访问组件信息、API 文档和使用示例。
 
 ## 可用资源
 
@@ -86,4 +86,4 @@ MCP 服务器为常见工作流提供引导式提示：
 - "帮我找适合实现日期选择的组件"
 - "我想实现带进度条的文件上传功能"
 
-AI 助手将使用 MCP 服务器获取结构化数据，并为 @movk/nuxt 提供引导式协助。
+AI 助手将使用 MCP 服务器获取结构化数据，并为 Movk Nuxt 提供引导式协助。
