--- a/docs/content/docs/1.getting-started/4.ai/2.llms-txt.md
+++ b/docs/content/docs/1.getting-started/4.ai/2.llms-txt.md
@@ -1,11 +1,11 @@
 ---
 title: LLMs.txt
-description: 如何让 Cursor、Windsurf、GitHub Copilot、ChatGPT 和 Claude 等 AI 工具理解 @movk/nuxt 组件、API 和最佳实践。
+description: 如何让 Cursor、Windsurf、GitHub Copilot、ChatGPT 和 Claude 等 AI 工具理解 Movk Nuxt 组件、API 和最佳实践。
 ---
 
 ## 什么是 LLMs.txt？
 
-LLMs.txt 是专为大型语言模型（LLM）设计的结构化文档格式。@movk/nuxt 提供 LLMs.txt 文件，其中包含 Nuxt 模块的完整信息，使 AI 工具能够更好地理解和协助 @movk/nuxt 的开发。
+LLMs.txt 是专为大型语言模型（LLM）设计的结构化文档格式。Movk Nuxt 提供 LLMs.txt 文件，其中包含 Nuxt 模块的完整信息，使 AI 工具能够更好地理解和协助 Movk Nuxt 的开发。
 
 这些文件针对 AI 消费进行了优化，包含组件 API、Composables 签名、Schema 定义、使用模式和最佳实践的结构化信息。
 
@@ -30,7 +30,7 @@ LLMs.txt 是专为大型语言模型（LLM）设计的结构化文档格式。@m
 
 ## AI 工具使用方法
 
-任何支持 LLMs.txt 的 AI 工具都可以使用这些端点来更好地理解 @movk/nuxt。
+任何支持 LLMs.txt 的 AI 工具都可以使用这些端点来更好地理解 Movk Nuxt。
 
-- "使用 @movk/nuxt 文档 [https://nuxt.mhaibaraai.cn/llms.txt](https://nuxt.mhaibaraai.cn/llms.txt)"
-- "遵循 @movk/nuxt 完整指南 [https://nuxt.mhaibaraai.cn/llms-full.txt](https://nuxt.mhaibaraai.cn/llms-full.txt)"
+- "使用 Movk Nuxt 文档 [https://nuxt.mhaibaraai.cn/llms.txt](https://nuxt.mhaibaraai.cn/llms.txt)"
+- "遵循 Movk Nuxt 完整指南 [https://nuxt.mhaibaraai.cn/llms-full.txt](https://nuxt.mhaibaraai.cn/llms-full.txt)"
