--- a/docs/content/docs/4.api/7.use-upload-with-progress.md
+++ b/docs/content/docs/4.api/7.use-upload-with-progress.md
@@ -50,13 +50,8 @@ const handleCancel = () => {
 - 内置 Toast 提示。
 
 ::note
-适用于需要展示上传进度的场景，如图片上传、文件管理等。对于无需进度的小文件，可以直接使用 `$api.$fetch`。
+适用于需要展示上传进度的场景，如图片上传、文件管理等。对于无需进度的小文件，可以直接使用 [`$api`](/docs/api/api-plugin) 发起请求。
 ::
-
-::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api"}
-了解 API 系统的全局配置选项
-::
-
 
 ## 单文件 vs 多文件上传
 
@@ -118,7 +113,7 @@ await upload('/api/upload', file, {
 // 触发 onError 回调,显示错误 Toast
 ```
 
-业务状态码规则由模块配置的 `response` 选项控制。
+业务状态码规则由[模块配置](/docs/getting-started/configuration#response)的 `response` 选项控制。
 
 ## 取消上传
 
@@ -142,7 +137,9 @@ const handleCancel = () => {
 - `uploading` 变为 `false`
 - `progress` 重置为 `0`
 - `error` 设为 `new Error('上传已取消')`
+- 不会触发 `onSuccess` / `onError` 回调
 - 不会显示 Toast 提示
+- `upload()` 返回 `{ data: null, error: Error }`
 
 
 ## 认证集成
@@ -169,17 +166,9 @@ await upload('/api/upload', file, {
 
 ### useUploadWithProgress()
 
-`useUploadWithProgress<T = unknown>(): { progress, uploading, data, error, upload, abort }`{lang="ts-type"}
+`useUploadWithProgress(): { progress, uploading, data, error, upload, abort }`{lang="ts-type"}
 
 创建上传管理器。
-
-#### Type Parameters
-
-::field-group
-  ::field{name="T" type="type"}
-  服务器响应 `data` 字段的类型。
-  ::
-::
 
 #### Returns
 
@@ -194,7 +183,7 @@ await upload('/api/upload', file, {
   是否正在上传中。
   ::
 
-  ::field{name="data" type="Ref<ApiResponse<T> | null>"}
+  ::field{name="data" type="Ref<ApiResponse | null>"}
   服务器响应数据。
   ::
 
@@ -202,7 +191,7 @@ await upload('/api/upload', file, {
   错误信息(如果上传失败)。
   ::
 
-  ::field{name="upload()" type="(url: string, files: File | File[], options?: UploadWithProgressOptions) => Promise<{ data: ApiResponse<T> | null, error: Error | null }>"}
+  ::field{name="upload()" type="(url: string, files: File | File[], options?: UploadWithProgressOptions) => Promise<{ data: ApiResponse | null, error: Error | null }>"}
   执行上传。
 
     ::collapsible
@@ -257,7 +246,7 @@ await upload('/api/upload', file, {
 
       **Returns**
 
-      返回 `Promise<{ data: ApiResponse<T> | null, error: Error | null }>`:
+      返回 `Promise<{ data: ApiResponse | null, error: Error | null }>`:
       - `data` - 服务器响应数据(成功时)
       - `error` - 错误信息(失败时)
     ::
