--- a/docs/content/docs/4.api/8.use-download-with-progress.md
+++ b/docs/content/docs/4.api/8.use-download-with-progress.md
@@ -49,11 +49,7 @@ const handleCancel = () => {
 - 内置 Toast 提示。
 
 ::note
-适用于需要展示下载进度的场景，如大文件导出、批量下载等。对于无需进度的小文件，可以直接使用 `$api.$fetch`。
-::
-
-::tip{icon="i-lucide-settings" to="/docs/getting-started/configuration#api"}
-了解 API 系统的全局配置选项
+适用于需要展示下载进度的场景，如大文件导出、批量下载等。对于无需进度的小文件，可以直接使用 [`$api`](/docs/api/api-plugin) 发起请求。
 ::
 
 ## 文件名提取
@@ -116,8 +112,10 @@ const handleCancel = () => {
 取消下载后:
 - `downloading` 变为 `false`
 - `progress` 重置为 `0`
+- `error` 设为 `AbortError`
 - 不会触发 `onError` 回调
 - 不会显示 Toast 提示
+- `download()` 返回 `{ success: false, error: AbortError }`
 
 ## 认证集成
 
