feat(docs): 添加 FileTree 组件并重构文档目录结构展示
- 新增 FileTree.vue 内容组件，支持带描述的树形目录展示
- 将最佳实践文档中的纯文本目录结构替换为 ::file-tree MDC 组件
- 添加 @iconify-json/vscode-icons 依赖以支持文件类型图标

--- a/docs/content/docs/7.best-practices/1.project-structure.md
+++ b/docs/content/docs/7.best-practices/1.project-structure.md
@@ -9,28 +9,49 @@ description: 按业务领域组织 API 接口、类型定义和目录结构
 
 Nuxt 4 引入了 `shared/` 目录（v3.14+），其中 `shared/types/` 和 `shared/utils/` 会被自动导入到 Vue app 和 Nitro server 两侧，适合放置前后端共享的类型和工具函数。
 
-```text
-shared/                           # Nuxt 4 前后端共享目录
-  types/                          # 自动导入到 app + server
-    api.ts                        # 通用 API 响应类型（分页、错误等）
-    common.ts                     # 通用业务实体（User、Order 等）
-  utils/                          # 自动导入到 app + server
-    format-date.ts                # 前后端通用工具函数
-    validate.ts                   # 通用校验函数
-
-app/
-  api/                            # API 接口层（仅 app 侧使用）
-    modules/
-      user/
-        index.ts                  # 所有 user 相关的 API 方法
-        types.ts                  # User 接口入参/出参类型
-      post/
-        index.ts
-        types.ts
-      order/
-        index.ts
-        types.ts
-```
+::file-tree
+---
+items:
+  - label: "shared/"
+    description: "Nuxt 4 前后端共享目录"
+    children:
+      - label: "types/"
+        description: "自动导入到 app + server"
+        children:
+          - label: "api.ts"
+            description: "通用 API 响应类型（分页、错误等）"
+          - label: "common.ts"
+            description: "通用业务实体（User、Order 等）"
+      - label: "utils/"
+        description: "自动导入到 app + server"
+        children:
+          - label: "format-date.ts"
+            description: "前后端通用工具函数"
+          - label: "validate.ts"
+            description: "通用校验函数"
+  - label: "app/"
+    children:
+      - label: "api/"
+        description: "API 接口层（仅 app 侧使用）"
+        children:
+          - label: "modules/"
+            children:
+              - label: "user/"
+                children:
+                  - label: "index.ts"
+                    description: "所有 user 相关的 API 方法"
+                  - label: "types.ts"
+                    description: "User 接口入参/出参类型"
+              - label: "post/"
+                children:
+                  - label: "index.ts"
+                  - label: "types.ts"
+              - label: "order/"
+                children:
+                  - label: "index.ts"
+                  - label: "types.ts"
+---
+::
 
 ::warning{icon="i-lucide-alert-circle"}
 `shared/` 目录中的代码**不能导入**任何 Vue 或 Nitro 专有代码（如 `ref`、`defineEventHandler` 等）。非 `shared/utils/` 和 `shared/types/` 下的文件不会被自动导入，需通过 `#shared` 别名手动导入。
